--- a/bolasrebotando.html
+++ b/bolasrebotando.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolas rebotando</title>
     <link rel="stylesheet" href="bolas.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <h1>Soyimaster</h1>
+    <script src="menu.js"></script><br>
+    
+
     <canvas></canvas>
 
     <script src="bolas.js"></script>
